--- a/src/main/webapp/WEB-INF/views/template/layout.html
+++ b/src/main/webapp/WEB-INF/views/template/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml" th:fragment="page">
 <head>
-    <title>Hello world!!</title>
+    <title th:text="${pagetitle != null} ? ${pagetitle} : 'Hellow'"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
