--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,16 +5,14 @@
 <body>
 <div th:fragment="content">
     <h1>Spring MVC app!</h1>
+    <h2>Static content for prototyping purposes only</h2>
     <span th:text="${message}"></span>
     <br/>
+    <h2>Static content for prototyping purposes only</h2>
     <span th:text="#{view.index.hello}"></span>
     <br/>
     <h2>Static content for prototyping purposes only</h2>
-    <div th:include="http://www.thymeleaf.org :: p.notice"></div>
-    <h2>Static content for prototyping purposes only</h2>
-    <div th:include="http://www.thymeleaf.org :: p.notice"></div>
-    <h2>Static content for prototyping purposes only</h2>
-    <div th:include="http://www.thymeleaf.org :: p.notice"></div>
+    <span th:text="#{view.index.hello}"></span>
 </div>
 </body>
 </html>
