Prueba vista y cintrolador Juanjo

--- a/src/main/webapp/WEB-INF/views/juanjo1.html
+++ b/src/main/webapp/WEB-INF/views/juanjo1.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Hello world!!</title>
+
+    <link href="css/twiceStyle.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
 <br/>
