--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -13,6 +13,44 @@
     <br/>
     <h2>Static content for prototyping purposes only</h2>
     <span th:text="#{view.index.hello}"></span>
+    <span th:text="${lang}"></span>
+
+    <form action="#" th:action="@{/}" th:object="${personForm}" method="post" id="my-form">
+
+        <input type="text" th:field="*{name}" title=""/>
+        <!--para probarlo con ajax request-->
+        <span class="field-validation-error" data-valmsg-for="name"></span>
+        <!--para probarlo con ajax request-->
+
+        <!--para probarlo con postback-->
+        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+              class="field-validation-error" data-valmsg-for="name"></span>
+        <!--para probarlo con postback-->
+        <br/>
+
+        <input type="text" th:field="*{age}" title=""/>
+        <!--para probarlo con ajax request-->
+        <span class="field-validation-error" data-valmsg-for="age"></span>
+        <!--para probarlo con ajax request-->
+
+        <!--para probarlo con postback-->
+        <span th:if="${#fields.hasErrors('age')}" th:errors="*{age}"
+              class="field-validation-error" data-valmsg-for="age"></span>
+        <!--para probarlo con postback-->
+        <br/>
+
+        <button type="submit">Submit</button>
+    </form>
+    <script>
+        $(function () {
+            $("#my-form").submit(function (event) {
+                event.preventDefault();
+                $tw.ajax({form: this, targetId: "_resultDiv", operation: "append"});
+            });
+        });
+    </script>
+
+    <div id="_resultDiv"></div>
 </div>
 </body>
 </html>
