Incluir nuevo logo Probar uso de properties para cargar el logo

--- a/src/main/webapp/WEB-INF/views/_result.html
+++ b/src/main/webapp/WEB-INF/views/_result.html
@@ -1,5 +1,5 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml">
     Hello again!
-    <strong th:text="${pform.name}"></strong>
-    <strong th:text="${pform.age}"></strong>
+    <strong th:text="${personForm.name}"></strong>
+    <strong th:text="${personForm.age}"></strong>
 </div>
