--- a/src/main/webapp/WEB-INF/views/template/_header.html
+++ b/src/main/webapp/WEB-INF/views/template/_header.html
@@ -13,7 +13,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand topnav" href="/">
-                <img alt="Brand" src="/resources/images/brand01.png"/>
+                <img alt="Brand" th:src="#{brand.image}"/>
                 <!--<span>Twicepixels</span>-->
             </a>
         </div>
