--- a/src/main/webapp/WEB-INF/views/template/layout.html
+++ b/src/main/webapp/WEB-INF/views/template/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/png" th:href="@{/resources/images/brand01.png}"/>
+    <link rel="icon" type="image/png" th:href="#{brand.image}"/>
     <link rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap/bootstrap.css}"/>
     <link rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}"/>
     <script th:src="@{/resources/js/jquery-1.10.2.min.js}"></script>
