--- a/src/main/webapp/resources/css/bootstrap/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap/bootstrap.css
@@ -4942,7 +4942,9 @@ a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #eeeeee;
+  background-image: url("/resources/images/unsplash.jpg") ;
+  background-size: 100%;
+  //background-color: #eeeeee;
 }
 .jumbotron h1,
 .jumbotron .h1 {
